static/css/main.css
:root {
    --flex-item-margin: 1.5px;
}
* {
    margin: 0;
    box-sizing: border-box;
}
html {
    font-size: 14px;
}
body {
    font-family: Helvetica, sans-serif;
    background-color: #000;
    color: #fff;
    font-size: 1rem;
    line-height: 1;
}
main {
    padding: 20px;
    width: 100%;
}
textarea {
    resize: none;
    display: block;
    border: 1px solid;
    width: 100%;
    /* border-left: 1px solid; */
    /* border-right: 1px solid; */
}
canvas {
    display: block;
    min-height: 200px;
}
canvas + canvas {
    margin-top: 60px;
}
*:focus,
.pseudo-focused {
    outline: 1px solid #fff;
    outline-offset: -2px;
    /* box-sizing: content-box; */
    /* border: 1px solid #fff; */
}
/* option {
    position: relative;
}
option:after {
    content: '';
    position: absolute;
    width: 10px;
    height: 10px;
    background-color: blue;
    right: 5px;
    top: 5px;
} */
.color-option {
    display: inline-block;
    cursor: pointer;
    width: 30px;
    height: 30px;
    border-right: 1px solid #000;
    border-bottom: 1px solid #000;
}

.selected-option {
    border: 1px solid #000;
    position: relative;
}
.selected-option[value='null']:before,
.selected-option[value='null']:after {
    content: '';
    position: absolute;
    left: 50%;
    top: 50%;
    width: 141.4%;
    border-top: 1px solid #000;
    transform-origin: center;
    
}
.selected-option[value='null']:before {
    transform: translate(-50%, -50%) rotate(-45deg);
}
.selected-option[value='null']:after {
    transform: translate(-50%, -50%) rotate(45deg);
}
.color-options-wrapper {
    position: absolute;
    width: 150px;
    /* display: flex; */
    flex-wrap: wrap;
    display: none;
    z-index: 100;
    border-top: 1px solid #000;
    border-left: 1px solid #000;
    box-sizing: content-box;
}
.pseudo-select.expanded .color-options-wrapper {
    display: flex;
}
.btn, a.btn, .dummy-btn{
    -webkit-appearance: none;
    appearance: none;
    border: 4px solid;
    background-color: transparent;
    color: #fff;
    font-size: 17px;
    line-height: 21px;
    border-radius: 10px;
    cursor: pointer;
}
.btn {
    /* padding: 8px 10px;
    border: 2px solid #000;
    cursor: pointer; */
    width: 270px;
    height: 90px;
}
.btn:hover
{
    color: #000;
    background-color: #fff;
    border-color: #fff;
}
.square-btn {
    /* font-size: 2em; */
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    line-height: 0.9;
    width: 30px;
    height: 30px;
    /* display: inline-block; */
}
.hidden {
    display: none;
}
.generator-container {
    margin-left: 500px;
    width: calc(100% - 500px);
    max-height: 100vh;
}
.control-panel {
    width: 520px;
    padding: 20px;
    padding-bottom: 90px;
    max-height: 100vh;
    overflow: scroll;;
    position: fixed;
    top: 0px;
    left: 0px;
    z-index: 100;
    background-color: #000;
}
#logo-container {
    display: none;
}
input,
input[type="text"],
select,
.pseudo-upload,
textarea
{
    /* float: right; */
    height: 30px;
    font-size: 14px;
    padding: 3px 10px 3px 10px;
    width: 100%;
    display: block;
    border: none;
    color: #FFF;
    background-color: #666060;
    /* clear: both; */
}
.pseudo-upload {
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: sans-serif;
}
select
{        
    appearance: none;
    border-radius: 0;
    position: relative;
    background: url(../../media/svg/v-9-k.svg) 98% / 24px no-repeat #FFF;        
    background-color: #666060;
}
textarea
{
    height: initial;
    border: none;
    margin: 0;
}
.typography-control textarea {
    flex: 0 0 100%;
}
label
{
    cursor: pointer;
    font-size: 1.21rem;
    vertical-align: top;
}
textarea + select
{
    margin-top: 3px;
}
#panel,
.control-panel
{
    display: inline-block;
    vertical-align: top;
    padding-right: 20px;
}
.common-control
{
    font-size: 16px;
    width: 500px;
    padding-right: 20px;
}
.half-right {
    width: 50%;
    float: right;
}
.half-right.flex-container {
    width: calc(50% + var(--flex-item-margin) * 2);
    position: relative;
    left: var(--flex-item-margin);
}
.clear-float {
    clear: both;
}
.waiting-for-format #panel-format .panel-section:after
{
    content: none;
}
#main{
    padding: 20px;
    padding-bottom: 80px;
}
.shape-image-section,
.base-image-section,
.color-upload-section {
    display: none;
    margin-bottom: 0;
}
.viewing-shape-image-section .shape-image-section,
.viewing-base-image-section .base-image-section,
[data-value="upload"] + .color-upload-section {
    display: block;
}
.shape-image-section > .delete-button,
.shape-image-section > .delete-button.btn,
.base-image-section > .delete-button,
.base-image-section > .delete-button.btn,
.color-upload-section > .delete-button, 
.color-upload-section > .delete-button.btn{
    display: none;
}
/* .viewing-shape-image-section .shape-image-section {
    display: none;
} */
/* #content
{
    max-width: none;
    padding: 0;
    text-align: left;
    display: inline-block;
} */
/* .body
{
    font-size: 1rem;
} */

.org-main-canvas
{
    display: block;
}
#main[data-canvas-status="initializing"] .org-main-canvas {
    position: absolute;
    display: block;
}
.generator-container.hidden {
    display: none;
}
.panel-section,
.watermarks-container
{
    margin-bottom: calc(8px - 2 * var(--flex-item-margin));
}    
.panel-section.media-control-section {
    margin-bottom: 0;
}
.field-id-image-controls,
.field-id-image-controls.flex-item
{
    /* display: none; */
    margin: 0 0 1.5px 0;
}
input[type="file"]
{
    display: none;
}
.pseudo-label
{
    display: inline-block;
}
input[type="file"] + label
{
    cursor: pointer;
    padding-top: 4px;
    text-align: center;
}
input[type="file"] + label:hover
{
    background-color: #ccc;
}
/* ... */

